juno/qa/apps/blackbox-exporter/services.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blackbox-exporter
  name: blackbox-exporter
spec:
  ports:
    - port: 9115
      protocol: TCP
      targetPort: 9115
  selector:
    app: blackbox-exporter
