juno/qa/apps/blackbox-exporter/ingresses.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blackbox-exporter
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: "cqdg-qa/blackbox-exporter-ca"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "false"
spec:
  tls:
    - hosts:
        - blackbox-exporter.qa.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: blackbox-exporter.qa.cqdg.ferlab.bio
      http:
        paths:
          - path: /
            backend:
              serviceName: blackbox-exporter
              servicePort: 9115
